# ComfyUI-DesignPack-ENG

./: .gitignore  CLAUDE.md  EXT.md  Need.md  README.md  __init__.py  llm_manager.py  pdf_magazine_generator.py  presentation_generator.py  presentation_maker.py  pyproject.toml  requirements.txt
Example/: LLMSetup.json  PDFExample.json  PPTExample.json
