[project]
name = "designpack"
description = "A ComfyUI custom node package for generating professional interior design presentations using AI. This package integrates with Gemini/Ollama/OpenAI APIs to analyze floor plans and automatically generate PowerPoint presentations and PDFs with AI-generated content and images."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["google-generativeai", "python-pptx", "pillow", "numpy", "torch", "requests", "reportlab"]

[project.urls]
Repository = "https://github.com/dseditor/ComfyUI-DesignPack"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "dseditor"
DisplayName = "ComfyUI-DesignPack"
Icon = ""
includes = []
